--- a/app/src/main/res/layout/activity_la_totuga.xml
+++ b/app/src/main/res/layout/activity_la_totuga.xml
@@ -10,6 +10,77 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?android:attr/actionBarSize"
+        android:background="?attr/colorPrimary"
         android:popupTheme="@android:style/ThemeOverlay.Material.Light"/>
 
+    <LinearLayout
+        android:id="@+id/playerContainer"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:orientation="horizontal"
+        android:layout_below="@+id/toolBar"
+        android:background="?attr/colorPrimary"
+        android:layout_marginTop="16dp">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/playerNameLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:text="@string/player_no_name"
+                android:textSize="24dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="8dp"/>
+            <TextView
+                android:id="@+id/playerSymphonyLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="16dp"
+                android:text="@string/player_no_name_sub"
+                android:layout_marginLeft="16dp"/>
+            <SeekBar
+                android:id="@+id/playerSeek"
+                android:layout_width="match_parent"
+                android:layout_height="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="16dp"
+                android:max="100"
+                android:progress="40"/>
+        </LinearLayout>
+        <ImageButton
+            android:id="@+id/playButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginRight="4dp"
+            android:background="?attr/colorPrimary"
+            android:src="@drawable/ic_action_play"/>
+        <ImageButton
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="?attr/colorPrimary"
+            android:src="@drawable/ic_action_stop"/>
+    </LinearLayout>
+
+    <Spinner
+        android:id="@+id/symphonySpinner"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_below="@+id/playerContainer"
+        android:background="?attr/colorPrimary"
+        android:spinnerMode="dialog"
+        android:layout_marginTop="16dp"/>
+
+    <ListView
+        android:id="@+id/namesList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:layout_below="@+id/symphonySpinner"/>
 </RelativeLayout>
