--- a/app/src/main/res/menu/menu_la_totuga.xml
+++ b/app/src/main/res/menu/menu_la_totuga.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".LaTotugaActivity">
 
     <item android:id="@+id/action_search" android:title="@string/action_search"
-        android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/ic_action_search"
         app:showAsAction="always"
         android:actionViewClass="android.support.v7.widget.SearchView" />
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
