--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -14,5 +14,6 @@
         <!-- colorAccent is used as the default value for colorControlActivated
          which is used to tint widgets -->
         <item name="android:colorAccent">#FF5722</item>
+        <item name="colorPrimary">#FAFAFA</item>
     </style>
 </resources>
