--- a/app/src/main/res/menu/menu_la_totuga.xml
+++ b/app/src/main/res/menu/menu_la_totuga.xml
@@ -2,10 +2,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".LaTotugaActivity">
 
-    <item android:id="@+id/action_search" android:title="@string/action_search"
+    <item android:id="@+id/name_search" android:title="@string/action_search"
         android:icon="@drawable/ic_action_search"
         app:showAsAction="always"
-        android:actionViewClass="android.support.v7.widget.SearchView" />
+        android:actionViewClass="android.support.v7.widget.SearchView"
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
