--- a/app/src/main/res/layout-v21/activity_la_totuga.xml
+++ b/app/src/main/res/layout-v21/activity_la_totuga.xml
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:text="@string/player_no_name"
-                android:textSize="24dp"
+                android:textSize="24sp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="8dp"/>
             <TextView
@@ -47,7 +47,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginLeft="16dp"
                 android:max="100"
-                android:progress="40"
+                android:progress="0"
                 android:background="?android:attr/colorAccent"/>
         </LinearLayout>
         <ImageButton
@@ -84,5 +84,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
-        android:layout_below="@+id/symphonySpinner"/>
+        android:layout_below="@+id/symphonySpinner"
+        android:layout_marginTop="16dp"/>
 </RelativeLayout>
