--- a/app/src/main/res/layout-v21/activity_la_totuga.xml
+++ b/app/src/main/res/layout-v21/activity_la_totuga.xml
@@ -50,6 +50,11 @@
                 android:progress="0"
                 android:background="?android:attr/colorAccent"/>
         </LinearLayout>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
         <ImageButton
             android:id="@+id/playButton"
             android:layout_width="48dp"
@@ -77,7 +82,8 @@
         android:layout_below="@+id/playerContainer"
         android:background="?attr/colorPrimary"
         android:spinnerMode="dialog"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        style="@style/Widget.AppCompat.Spinner.DropDown"/>
 
     <ListView
         android:id="@+id/namesList"
@@ -86,4 +92,5 @@
         android:background="?attr/colorPrimary"
         android:layout_below="@+id/symphonySpinner"
         android:layout_marginTop="16dp"/>
+
 </RelativeLayout>
