--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -15,5 +15,11 @@
          which is used to tint widgets -->
         <item name="android:colorAccent">#FF5722</item>
         <item name="colorPrimary">#FAFAFA</item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <!-- Configuration for the fast scroll component. -->
+        <item name="android:fastScrollThumbDrawable">@drawable/fastscroll_thumb_holo</item>
+        <item name="android:fastScrollOverlayPosition">atThumb</item>
+        <item name="android:fastScrollTextColor">@color/app_color</item>
+        <item name="android:fastScrollPreviewBackgroundRight">@drawable/bg_default_focused_holo_light</item>
     </style>
 </resources>
