Fixed styles for android under lollipop.

--- a/app/src/main/res/layout-v21/activity_la_totuga.xml
+++ b/app/src/main/res/layout-v21/activity_la_totuga.xml
@@ -71,6 +71,7 @@
         </LinearLayout>
         <SeekBar
             android:id="@+id/playerSeek"
+            android:visibility="invisible"
             android:layout_width="match_parent"
             android:layout_height="32dp"
             android:layout_marginStart="16dp"
