--- a/app/src/main/res/layout/activity_la_totuga.xml
+++ b/app/src/main/res/layout/activity_la_totuga.xml
@@ -3,84 +3,99 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LaTotugaActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LaTotugaActivity"
+    android:background="#2196F3">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?android:attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:background="#FAFAFA"
         android:popupTheme="@android:style/ThemeOverlay.Material.Light"/>
 
     <LinearLayout
-        android:id="@+id/playerContainer"
+        android:id="@+id/reelSection"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_below="@+id/toolBar"
-        android:background="?attr/colorPrimary"
+        android:background="#FAFAFA"
         android:layout_marginTop="16dp">
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/playerNameLabel"
+            android:id="@+id/playerContainer"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:orientation="horizontal"
+            android:layout_below="@+id/toolBar"
+            android:background="#FAFAFA">
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="32dp"
-                android:text="@string/player_no_name"
-                android:textSize="24dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/playerNameLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/player_no_name"
+                    android:textSize="24sp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="4dp"/>
+                <TextView
+                    android:id="@+id/playerSymphonyLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/player_no_name_sub"
+                    android:layout_marginLeft="8dp"/>
+            </LinearLayout>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+
+            <ImageButton
+                android:id="@+id/playButton"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="8dp"/>
-            <TextView
-                android:id="@+id/playerSymphonyLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="16dp"
-                android:text="@string/player_no_name_sub"
-                android:layout_marginLeft="16dp"/>
-            <SeekBar
-                android:id="@+id/playerSeek"
-                android:layout_width="match_parent"
-                android:layout_height="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="16dp"
-                android:max="100"
-                android:progress="40"/>
+                android:layout_marginRight="4dp"
+                android:background="#FAFAFA"
+                android:src="@drawable/ic_action_play"/>
+            <ImageButton
+                android:id="@+id/stopButton"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginLeft="4dp"
+                android:background="#FAFAFA"
+                android:src="@drawable/ic_action_stop"/>
         </LinearLayout>
-        <ImageButton
-            android:id="@+id/playButton"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginRight="4dp"
-            android:background="?attr/colorPrimary"
-            android:src="@drawable/ic_action_play"/>
-        <ImageButton
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:background="?attr/colorPrimary"
-            android:src="@drawable/ic_action_stop"/>
+        <SeekBar
+            android:id="@+id/playerSeek"
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:progressDrawable="@drawable/latotuga_scrubber_progress_horizontal_holo_light"
+            android:thumb="@drawable/latotuga_scrubber_control_selector_holo_light"/>
     </LinearLayout>
+
 
     <Spinner
         android:id="@+id/symphonySpinner"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_below="@+id/playerContainer"
-        android:background="?attr/colorPrimary"
+        android:layout_below="@+id/reelSection"
+        android:background="#FAFAFA"
         android:spinnerMode="dialog"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        style="@style/Widget.AppCompat.Spinner.DropDown"/>
 
     <ListView
         android:id="@+id/namesList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:layout_below="@+id/symphonySpinner"/>
+        android:background="#FAFAFA"
+        android:layout_below="@+id/symphonySpinner"
+        android:layout_marginTop="16dp"/>
 </RelativeLayout>
